--- a/world_happiness_report.ipynb
+++ b/world_happiness_report.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "world-happiness-report.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMM2uGLYyYe/4cOJdnj71/D",
+      "authorship_tag": "ABX9TyNIGxM9DRNYanGVpibk0bOn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,19 +42,20 @@
         "## Data dictionary\n",
         "\n",
         "```\n",
-        "Country name: \n",
-        "Regional indicator:\n",
-        "Ladder score:\n",
-        "Standard error of the ladder score:\n",
-        "upperwhisker:\n",
-        "lowerwhisker:\n",
-        "Logged GDP per capita:\n",
-        "Social support:\n",
-        "Healthy life expectancy:\n",
-        "Freedom to make life choices:\n",
-        "Generosity:\n",
-        "Perceptions of corruption:\n",
-        "Ladder score in Dystopia:\n",
+        "Country name\n",
+        "Regional indicator: World region the country belongs to (North America and ANZ, \n",
+        "Western Europe, Central and Eastern Europe, Latin America and Caribbean, East Asia, Commonwealth of Independent States, Southeast Asia, Middle East and North Africa, Sub-Saharan Africa, South Asia)\n",
+        "Ladder score: Based entirely on surveys with participants from the listed countries. According to the FAQ, this is called the Cantril ladder: it asks respondents to think of a ladder, with the best possible life for them being a 10, and the worst possible life being a 0.\n",
+        "Standard error of the ladder score\n",
+        "upperwhisker\n",
+        "lowerwhisker\n",
+        "Logged GDP per capita\n",
+        "Social support\n",
+        "Healthy life expectancy\n",
+        "Freedom to make life choices\n",
+        "Generosity\n",
+        "Perceptions of corruption\n",
+        "Ladder score in Dystopia\n",
         "```"
       ]
     },
